--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import org.moallemi.gradle.internal.VersionCodeType
+
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
@@ -6,7 +8,7 @@ buildscript {
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.24.0'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.2'
         classpath 'com.github.hotchemi:gradle-proguard-plugin:0.1.0'
     }
 }
@@ -15,22 +17,30 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 apply plugin: 'io.fabric'
 apply plugin: 'com.getkeepsafe.dexcount'
-apply plugin: 'com.github.alexfu.androidautoversion'
+apply plugin: 'org.moallemi.advanced-build-version'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
 
-androidAutoVersion {
-    release {
-        releaseTask = "assembleRelease"
+advancedVersioning {
+    nameOptions {
+        versionMajor app.versionMajor
+        versionMinor app.versionMinor
+        versionPatch app.versionPatch
+        versionBuild versionCode
+    }
+    codeOptions {
+        versionCodeType VersionCodeType.AUTO_INCREMENT_ONE_STEP
+        dependsOnTasks 'release', 'beta'
+
+    }
+    outputOptions {
+        renameOutput true
+        nameFormat 'PUBGTracker-${buildType}-${versionName}'
     }
 }
-
-def versionMajor = 0
-def versionMinor = 1
-def versionPatch = 0
 
 def getGitHash = { ->
     def stdout = new ByteArrayOutputStream()
@@ -38,7 +48,6 @@ def getGitHash = { ->
         commandLine 'git', 'rev-parse', '--short', 'HEAD'
         standardOutput = stdout
     }
-    return stdout.toString().trim()
 }
 
 // Create a variable called keystorePropertiesFile, and initialize it to your
@@ -56,6 +65,7 @@ if (keystorePropertiesFile.canRead()) {
 }
 
 android {
+    def appVersionCode = app.versionMajor * 10000 + app.versionMinor * 1000 + app.versionPatch * 100 + advancedVersioning.versionCode
     signingConfigs {
         releaseConfig {
             keyAlias keystoreProperties['keyAlias']
@@ -65,33 +75,21 @@ android {
         }
     }
     flavorDimensions "release"
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
-    def versionPropsFile = file('version.properties')
-    if (versionPropsFile.canRead()) {
-        def Properties versionProps = new Properties()
+    compileSdkVersion rootProject.compileSdkVersion
+    buildToolsVersion rootProject.buildToolsVersion
 
-        versionProps.load(new FileInputStream(versionPropsFile))
-
-        def versionBuild = versionProps['VERSION_CODE'].toInteger() + 1
-
-        versionProps['VERSION_CODE'] = versionBuild.toString()
-        versionProps.store(versionPropsFile.newWriter(), null)
-
-        defaultConfig {
-            applicationId "me.calebjones.pubgtracker"
-            multiDexEnabled false
-            minSdkVersion 19
-            targetSdkVersion 26
-            versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
-            versionName "${versionMajor}.${versionMinor}.${versionPatch}"
-            buildConfigField "String", "GitHash", "\"${getGitHash()}\""
-            manifestPlaceholders = [crashlyticsApiKey: fabric_key]
-            testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        }
-    } else {
-        throw new GradleException("Could not read version.properties!")
+    defaultConfig {
+        applicationId "me.calebjones.pubgtracker"
+        multiDexEnabled false
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.targetSdkVersion
+        versionCode appVersionCode
+        versionName advancedVersioning.versionName
+        buildConfigField "String", "GitHash", "\"${getGitHash()}\""
+        manifestPlaceholders = [crashlyticsApiKey: fabric_key]
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         debug {
             ext.alwaysUpdateBuildId = false
@@ -100,20 +98,16 @@ android {
             applicationName = "Debug"
             manifestPlaceholders = [appNameLabel: "PUBG - Debug"]
             debuggable true
-            versionNameSuffix ".debug"
+            versionNameSuffix "-debug-${defaultConfig.versionCode}"
         }
         release {
             minifyEnabled true
             applicationName = "PUBG Tracker"
+            versionNameSuffix "-b${appVersionCode}"
             proguardFile 'proguard-project-app.pro'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [appNameLabel: "PUBG Tracker"]
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            android.applicationVariants.all { variant ->
-                variant.outputs.all {
-                    outputFileName = "PUBG-Tracker-release-${variant.versionName}.${variant.versionCode}-${getGitHash()}.apk"
-                }
-            }
             signingConfig signingConfigs.releaseConfig
         }
     }
@@ -132,6 +126,7 @@ android {
             dimension "release"
         }
     }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
@@ -139,49 +134,63 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    // If you want to use the GPU Filters
+
+    // Android Official Libraries
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:design:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
+    implementation "com.google.android.gms:play-services-location:$rootProject.playServicesVersion"
+    implementation "com.google.android.gms:play-services-gcm:$rootProject.playServicesVersion"
+    implementation "com.google.android.gms:play-services-ads:$rootProject.playServicesVersion"
+
+    // Communication
+//    implementation 'com.onesignal:OneSignal:3.6.5@aar'
+
+    // Views and Animations
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.lapism:searchview:4.0'
+    implementation 'com.mikepenz:iconics-core:3.0.0@aar'
+    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
+    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'uk.co.samuelwall:material-tap-target-prompt:2.0.1'
+    implementation 'com.mikepenz:iconics-views:2.9.3@aar'
     implementation('com.mikepenz:materialdrawer:5.9.5@aar') {
         transitive = true
     }
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.google.code.gson:gson:2.8.1'
-    implementation 'com.jakewharton.timber:timber:4.5.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.lapism:searchview:4.0'
-    implementation 'blue.aodev:material-values:1.1.1'
-    implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.1.0'
-    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
-    implementation 'com.pixplicity.easyprefs:library:1.9.0'
-    implementation 'com.andkulikov:transitionseverywhere:1.7.5'
-    implementation 'com.mikepenz:iconics-core:2.9.3@aar'
-    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
-    implementation 'com.mikepenz:iconics-views:2.9.3@aar'
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     implementation 'cz.kinst.jakub:android-stateful-layout-simple:2.0.5'
-    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
-    implementation 'com.jonathanfinerty.once:once:1.2.2'
-    implementation 'uk.co.samuelwall:material-tap-target-prompt:2.0.1'
-    implementation 'com.github.jrvansuita:MaterialAbout:0.1.8'
+    implementation 'com.andkulikov:transitionseverywhere:1.7.7'
+    implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.6.0'
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
     implementation('com.afollestad.material-dialogs:core:0.9.4.7') {
         exclude module: 'support-v13'
     }
-    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
-    implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
-    implementation 'com.github.clans:fab:1.6.4'
-    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
+    implementation 'com.github.jrvansuita:MaterialAbout:0.1.9'
+
+
+    // Networking
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+    // Tools
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    implementation 'com.jakewharton.timber:timber:4.6.0'
+    implementation 'blue.aodev:material-values:1.1.1'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.pixplicity.easyprefs:library:1.9.0'
+    implementation 'com.jonathanfinerty.once:once:1.2.2'
     testImplementation 'junit:junit:4.12'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true
     }
-    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.6.0'
 }
 
