--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,12 @@ buildscript {
         maven { url "https://jitpack.io" }
         jcenter()
         mavenCentral()
-        google()
     }
     dependencies {
-        classpath "io.realm:realm-gradle-plugin:3.5.0"
-        classpath 'com.android.tools.build:gradle:3.0.0-beta7'
+        classpath "io.realm:realm-gradle-plugin:4.2.0"
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.github.alexfu:androidautoversion:1.0.0'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'org.moallemi.gradle.advanced-build-version:gradle-plugin:1.6.0'
     }
 }
 
@@ -27,6 +25,26 @@ allprojects {
             url "https://maven.google.com"
         }
     }
+}
+
+// Define versions in a single place
+ext {
+
+    app = [
+            versionMajor : 0,
+            versionMinor : 1,
+            versionPatch : 0
+    ]
+
+    // App dependencies
+    supportLibraryVersion = '27.0.1'
+    playServicesVersion = '11.6.2'
+
+    // Sdk and tools
+    minSdkVersion = 19
+    targetSdkVersion = 27
+    compileSdkVersion = 27
+    buildToolsVersion = '26.0.2'
 }
 
 task clean(type: Delete) {
