--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,8 @@ android {
             manifestPlaceholders = [appNameLabel: "PUBG - Debug"]
             debuggable true
             versionNameSuffix "-debug-${defaultConfig.versionCode}"
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
         }
         release {
             minifyEnabled true
@@ -131,19 +133,19 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
 
     // Android Official Libraries
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:design:$rootProject.supportLibraryVersion"
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.google.android.gms:play-services-location:$rootProject.playServicesVersion"
     implementation "com.google.android.gms:play-services-gcm:$rootProject.playServicesVersion"
     implementation "com.google.android.gms:play-services-ads:$rootProject.playServicesVersion"
 
+    implementation "com.google.firebase:firebase-ads:$rootProject.playServicesVersion"
+    implementation "com.google.firebase:firebase-messaging:$rootProject.playServicesVersion"
     // Communication
 //    implementation 'com.onesignal:OneSignal:3.6.5@aar'
 
@@ -152,27 +154,26 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.lapism:searchview:4.0'
     implementation 'com.mikepenz:iconics-core:3.0.0@aar'
-    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
-    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
-    implementation 'uk.co.samuelwall:material-tap-target-prompt:2.0.1'
     implementation 'com.mikepenz:iconics-views:2.9.3@aar'
+    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
+//    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'uk.co.samuelwall:material-tap-target-prompt:2.0.1'
     implementation('com.mikepenz:materialdrawer:5.9.5@aar') {
         transitive = true
     }
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     implementation 'cz.kinst.jakub:android-stateful-layout-simple:2.0.5'
     implementation 'com.andkulikov:transitionseverywhere:1.7.7'
     implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.6.0'
-    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
     implementation('com.afollestad.material-dialogs:core:0.9.4.7') {
         exclude module: 'support-v13'
     }
     implementation 'com.github.jrvansuita:MaterialAbout:0.1.9'
-
 
     // Networking
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
@@ -188,9 +189,10 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.pixplicity.easyprefs:library:1.9.0'
     implementation 'com.jonathanfinerty.once:once:1.2.2'
-    testImplementation 'junit:junit:4.12'
     implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true
     }
 }
 
+
+apply plugin: 'com.google.gms.google-services'
