--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.github.alexfu:androidautoversion:1.0.0'
         classpath 'org.moallemi.gradle.advanced-build-version:gradle-plugin:1.6.0'
+        classpath 'com.google.gms:google-services:3.1.0'
     }
 }
 
@@ -37,7 +38,7 @@ ext {
     ]
 
     // App dependencies
-    supportLibraryVersion = '27.0.1'
+    supportLibraryVersion = '27.0.2'
     playServicesVersion = '11.6.2'
 
     // Sdk and tools
